--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     },
     "dependencies": {
         "@vuelidate/core": "^2.0.0-alpha.44",
-        "@vuelidate/validators": "^2.0.0-alpha.31"
+        "@vuelidate/validators": "^2.0.0-alpha.31",
+        "vue-the-mask": "^0.11.1"
     }
 }
