--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.4",
         "@popperjs/core": "^2.11.6",
         "@vitejs/plugin-vue": "^3.0.1",
         "axios": "^0.27.2",
         "bootstrap": "^4.6.0",
-        "font-awesome": "^4.7.0",
         "jquery": "^3.6.0",
         "js-cookie": "^3.0.1",
         "laravel-mix": "^6.0.49",
