--- a/public/.htaccess
+++ b/public/.htaccess
@@ -18,4 +18,6 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+    # RewriteRule ^ /ciclosesc/public/index.php [L]
+    # RewriteRule ^(.*)$ /ciclosesc/public/index.php [L]
 </IfModule>
