--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@fortawesome/fontawesome-free": "^5.15.4",
         "@popperjs/core": "^2.11.6",
         "@vitejs/plugin-vue": "^3.0.1",
         "axios": "^0.27.2",
@@ -32,6 +31,7 @@
     "dependencies": {
         "@vuelidate/core": "^2.0.0-alpha.44",
         "@vuelidate/validators": "^2.0.0-alpha.31",
+        "fontawesome-4.7": "^4.7.0",
         "vue-the-mask": "^0.11.1"
     }
 }
