--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@vuelidate/core": "^2.0.0-alpha.44",
         "@vuelidate/validators": "^2.0.0-alpha.31",
         "fontawesome-4.7": "^4.7.0",
+        "vue-router": "^4.1.5",
         "vue-the-mask": "^0.11.1"
     }
 }
